Updated white in styles to eggshell

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body.active {
 }
 
 .no-js #experience-timeline>div {
-    background: #fff;
+    background: #f1f1f1;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #dcd9d9
@@ -78,7 +78,7 @@ header {
 
 header ul {
     display: inline-block;
-    background: #fff;
+    background: #f1f1f1;
     text-align: center;
     padding: 10px;
     margin: 0;
@@ -132,14 +132,14 @@ header.sticky {
     z-index: 20;
     padding: 0 7px;
     border-radius: 4px;
-    background: #fff
+    background: #f1f1f1
 }
 
 #mobile-menu-close {
     display: none;
     text-align: right;
     width: 100%;
-    background: #fff;
+    background: #f1f1f1;
     font-size: 1.5em;
     padding-right: 15px;
     padding-top: 10px;
@@ -216,24 +216,24 @@ footer {
 .btn-rounded-blue {
     display: inline-block;
     background-color: #0028b9;
-    color: #fff;
+    color: #f1f1f1;
     padding: 15px 25px;
-    border: 3px solid #fff;
+    border: 3px solid #f1f1f1;
     border-radius: 30px;
     transition: .5s ease all
 }
 .btn-rounded-white {
     display: inline-block;
-    color: #fff;
+    color: #f1f1f1;
     padding: 15px 25px;
-    border: 3px solid #fff;
+    border: 3px solid #f1f1f1;
     border-radius: 30px;
     transition: .5s ease all
 }
 
 .btn-rounded-white:hover {
     color: #3498db;
-    background: #fff;
+    background: #f1f1f1;
     text-decoration: none
 }
 
@@ -309,14 +309,14 @@ footer {
 }
 
 #lead-content h1{
-    text-shadow: 2px 2px #000000;
+    text-shadow: 2px 2px #1f1f1f;
 }
 #lead-content h2 {
     margin: 0
 }
 
 #lead-content h1 {
-    color: #fff;
+    color: #f1f1f1;
     font-weight: 900;
     font-size: 5em;
     text-transform: uppercase;
@@ -351,7 +351,7 @@ footer {
     text-align: center;
     z-index: 10;
     bottom: 15px;
-    color: #fff
+    color: #f1f1f1
 }
 
 #lead-down span {
@@ -441,7 +441,7 @@ footer {
 
 .vtimeline-content {
     margin-left: 350px;
-    background: #fff;
+    background: #f1f1f1;
     border: 1px solid #e6e6e6;
     padding: 15px;
     border-radius: 3px;
@@ -478,7 +478,7 @@ footer {
 
 .vtimeline-icon {
     position: relative;
-    color: #fff;
+    color: #f1f1f1;
     width: 50px;
     height: 50px;
     background: #3498db;
@@ -569,7 +569,7 @@ footer {
     max-width: 900px;
     margin: 0 auto 30px auto;
     overflow: hidden;
-    background: #fff;
+    background: #f1f1f1;
     border-radius: 4px
 }
 
@@ -645,7 +645,7 @@ footer {
 
 #contact h2 {
     margin: 0 0 15px 0;
-    color: #fff;
+    color: #f1f1f1;
     font-weight: 500
 }
 
@@ -663,30 +663,30 @@ footer {
     border: none;
     margin-bottom: 10px;
     background: #1d6fa5;
-    color: #fff;
+    color: #f1f1f1;
     transition: .5s ease all
 }
 
 #contact-form input::-webkit-input-placeholder,
 #contact-form textarea::-webkit-input-placeholder {
-    color: #fff
+    color: #f1f1f1
 }
 
 #contact-form input:-moz-placeholder,
 #contact-form textarea:-moz-placeholder {
-    color: #fff;
+    color: #f1f1f1;
     opacity: 1
 }
 
 #contact-form input::-moz-placeholder,
 #contact-form textarea::-moz-placeholder {
-    color: #fff;
+    color: #f1f1f1;
     opacity: 1
 }
 
 #contact-form input:-ms-input-placeholder,
 #contact-form textarea:-ms-input-placeholder {
-    color: #fff
+    color: #f1f1f1
 }
 
 #contact-form input:focus,
@@ -703,7 +703,7 @@ footer {
 #contact-form button {
     display: block;
     width: 100%;
-    background: #fff;
+    background: #f1f1f1;
     border-radius: 4px;
     padding: 5px 10px;
     border: none;
@@ -732,7 +732,7 @@ footer {
     margin: 0 auto 30px auto;
     padding: 15px;
     border: 1px solid #dcd9d9;
-    background: #fff;
+    background: #f1f1f1;
     text-align: left
 }
 
