Removed most images - replaced one

--- a/css/styles.css
+++ b/css/styles.css
@@ -277,7 +277,7 @@ footer {
 }
 /* background images */
 .homepage-top{
-     background: url(../images/FratCoverImage.jpg);
+     background: url(../images/family-background.jpg);
 }
 .Engine-top{
     background: url(../images/backblast.png);
