--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,7 @@ footer {
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba(33, 125, 187, 0.8);
+    background: rgba(100, 33, 187, 0.8);
     z-index: 1
 }
 
@@ -361,7 +361,7 @@ footer {
     width: 35px;
     height: 35px;
     border-radius: 50%;
-    border: 3px solid #a0cfee;
+    border: 3px solid #c8a0ee;
     text-align: center
 }
 
@@ -424,7 +424,7 @@ footer {
     right: auto;
     height: 100%;
     width: 3px;
-    background: #3498db;
+    background: #9034db;
     z-index: 0
 }
 
@@ -433,8 +433,8 @@ footer {
     content: '';
     width: 3px;
     height: 40px;
-    background: #3498db;
-    background: linear-gradient(to bottom, #3498db, rgba(52, 152, 219, 0));
+    background: #9034db;
+    background: linear-gradient(to bottom, #9034db, rgba(52, 152, 219, 0));
     top: 100%;
     left: 303px
 }
@@ -662,7 +662,7 @@ footer {
     border-radius: 4px;
     border: none;
     margin-bottom: 10px;
-    background: #1d6fa5;
+    background: #731da5;
     color: #f1f1f1;
     transition: .5s ease all
 }
@@ -707,7 +707,7 @@ footer {
     border-radius: 4px;
     padding: 5px 10px;
     border: none;
-    color: #3498db;
+    color: #9034db;
     font-weight: 700;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: .5s ease all
