--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -174,7 +174,7 @@ header {
         &:hover {
             color: $base-color-hover;
             text-decoration: none;
-            background: #eee;
+            background: #e1e1e1;
             border-radius: 4px;
         }
 
