Moved pronouns field

--- a/css/styles.css
+++ b/css/styles.css
@@ -325,7 +325,7 @@ footer {
 }
 
 #lead-content h2 {
-    color: #a0cfee;
+    color: #c8a0ee;
     font-weight: 500;
     font-size: 2.25em;
     margin-bottom: 15px
