Fixed styling soft eng page maybe

--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ header.sticky {
     position: fixed;
     right: 15px;
     top: 10px;
-    color: #3498db;
+    color: #ba34db;
     font-size: 1.5em;
     z-index: 20;
     padding: 0 7px;
